<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ndihme.NdihmeFragment"
    android:background="@drawable/ndihmebackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:text=" ">

        </TextView>

        <TextView
            android:layout_width="391dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/ndihme1"
            android:textColor="#ffff">

        </TextView>

        <TextView
            android:layout_width="392dp"
            android:layout_height="47dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/ndihme2"
            android:textColor="#ffff">


        </TextView>

        <TextView
            android:layout_width="393dp"
            android:layout_height="114dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/ndihme3"
            android:textColor="#ffff">

        </TextView>

        <TextView
            android:layout_width="394dp"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/ndihme4"
            android:textColor="#ffff">

        </TextView>

        <TextView
            android:layout_width="393dp"
            android:layout_height="43dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/ndihme5"
            android:textColor="#ffff">

        </TextView>

        <TextView
            android:layout_width="394dp"
            android:layout_height="69dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/ndihme6"
            android:textColor="#ffff">

        </TextView>

        <TextView
            android:layout_width="393dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/ndihme7"
            android:textColor="#ffff">

        </TextView>





    </LinearLayout>
</ScrollView>