<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projekt_parking.ui.parko.ParkoFragment"
        android:label="@string/menu_parko"
        tools:layout="@layout/fragment_parko">

        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.projekt_parking.ui.ndihme.NdihmeFragment"
        android:label="@string/menu_ndihme"
        tools:layout="@layout/fragment_ndihme" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.projekt_parking.ui.dilngaprogrami.DilngaprogramiFragment"
        android:label="@string/menu_dilngaprogrami"
        tools:layout="@layout/fragment_dilngaprogrami" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>